<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>estun_controllers</name>
  <version>0.9.0</version>
  <description>ROS 2 controller plugins for Estun-specific status and IO semantics.</description>
  <maintainer email="zhuyufan@estun.com">Zhuyufan</maintainer>
  <license>Apache-2.0</license>
  <author email="info@estun.com">ESTUN AUTOMATION CO., LTD.</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>estun_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
