<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>estun_hardware</name>
  <version>0.9.0</version>
  <description>ROS 2 hardware interface for Estun robots</description>
  <maintainer email="zhuyufan@estun.com">Zhuyufan</maintainer>
  <license>Apache-2.0</license>
  <author email="info@estun.com">ESTUN AUTOMATION CO., LTD.</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>estun_msgs</depend>
  <depend>estun_libs</depend>
  <depend>ament_index_cpp</depend>
  <exec_depend>ament_index_python</exec_depend>
  <depend>controller_manager</depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>estun_controllers</exec_depend>
  <exec_depend>estun_description</exec_depend>
  <depend>hardware_interface</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>yaml_cpp_vendor</depend>
  <exec_depend>rclpy</exec_depend>
  <depend>realtime_tools</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
